# python2

./: pyproject.toml
src/sql/: alembic.ini  baza5.db  zad123.py  zad4.py  zad5.py
src/sql/alembic/: env.py
src/sql/alembic/versions/: 317e2851267c_initial_migration.py  82e2cd9fb62c_wiele_do_wielu.py
